--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -1,5 +1,5 @@
 {% extends 'page/basic.html' %}
-{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangment can genearte you with honest purchases."> {% endblock desc%}
+{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangement can genearte you with honest purchases."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="mobile specifications for pubg, mobile specification websites, mobile specifications and prices, camera phone under 15000 , camera phone amazon, top 5 camera phones, pubg mobile phones list, best pubg phone under 20000"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/home_pageCss.css' %}">{% endblock css%}
@@ -49,7 +49,7 @@
     </div>
     <div class="quick-link">
       <div class="link4 shadow">
-        <a class="row2" href="{% url 'battery'%}">Best Bettary Backup Mobile Phone</a>
+        <a class="row2" href="{% url 'battery'%}">Best battery Backup Mobile Phone</a>
       </div>
       <div class="link5 shadow">
         <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
