--- a/limbo/affiliate/static/pageCss/home_pageCss.css
+++ b/limbo/affiliate/static/pageCss/home_pageCss.css
@@ -10,7 +10,7 @@ header{
   width: 100%;
   margin: 0;
   padding: 10px;
-  background: #fff;
+  background: white;
   box-sizing: border-box;
   box-shadow: 0 2px 5px rgba(0,0,0,.2);
 }
@@ -156,12 +156,13 @@ nav ul li a:hover{
 
 }
 .content_img img{
+  width: 500px;
   height: 350px;
   transform: translateX(-30px);
   box-shadow:  0 .1rem .8rem rgba(0,0,0,.2);
   border-radius: .8rem;
   object-fit: cover;
-  margin-top: 65px;
+  margin-top: 45px;
 }
 .content_body{
   display: flex;
@@ -293,6 +294,7 @@ footer{
       height: 750px;
     }
     .content_img img{
+      width: 100%;
       transform: translateY(-70px);
     }
     .content_body{
@@ -385,11 +387,11 @@ footer{
 
     /* content page */
     .content_img img{
+      width: 90%;
       height: 320px;
-      margin-top: 50px;
     }
     .content{
-      height: 750px;
+      height: 800px;
     }
     .content_text{
       font-size: 13px;
