--- a/limbo/affiliate/static/pageCss/mobile_pageCss.css
+++ b/limbo/affiliate/static/pageCss/mobile_pageCss.css
@@ -179,9 +179,11 @@ nav ul li a:hover{
   border-radius: .8rem;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 
 }
 .content_img img{
+  width: 500px;
   height: 350px;
   transform: translateX(-30px);
   box-shadow:  0 .1rem .8rem rgba(0,0,0,.2);
@@ -315,6 +317,7 @@ footer{
       height: 720px;
     }
     .content_img img{
+      width: 100%;
       transform: translateY(-70px);
     }
     .content_body{
@@ -415,6 +418,7 @@ footer{
     }
     /* content page */
     .content_img img{
+      width: 100%;
       height: 320px;
       margin-left: 0;
     }
