--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -4,7 +4,7 @@
     {% block actart%} class="active"{% endblock actart%}
     <!-- news -->
     {% block content%}
-    <style media="screen">
+    <style>
       *{
         margin: 0;
         box-sizing: border-box;
