--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -9,7 +9,7 @@
       <div class="main">
         <div class="headline2">
           <h2 class="content_tittle">Top 10 backend Framework for web development in 2020</h2>
-          <p class="content">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . It is the term used for the behind-the-scenes activities that happen when performing any action on a website. for backend programing you should have knowledege about any of this language like python , java , .NET , Ruby etc.</p>
+          <p class="content">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . backend is a term used for the behind the scenes activities that happen when performing any action on a website. for backend programing you should have knowledege about any of this language like python , java , .NET , Ruby etc.</p>
           <p></p>
           <p>By <span style="color:blue;">Rohit Raj</span>- Updated on <b style="color: gray;">21 July, 2020</b></p>
           <img class="image" src="{% static 'image/article/programing/backend-frontend.png'%}" alt="">
@@ -19,7 +19,7 @@
         <div class="info">
           <p></p>
           <h4 class="content">Static & Dynamic Web</h4>
-          <p class="content">website are separated into two different types called <span>static</span> and <span>Dynamic</span>. Static website are once that are fixed and display thre same content for every users, usaually written in HTML and designed with the help of CSS. On the  other hand, is one that can display different content and provide user interaction. Generally static website are easier to create but for creating dynamic website require more work. For creating dynamic website atleast you have basic knowledege about in any <span>high level language</span>.</p>
+          <p class="content">website are separated into two different types called <span>static</span> and <span>Dynamic</span>. Static website are once that are fixed and display thre same content for every users, usaually written in HTML and designed with the help of CSS. On the  other hand, dyanamic websites can display different content and provide user interaction. Generally static website are easier to create but for creating dynamic website require more work. For creating dynamic website atleast you have basic knowledege about in any <span>high level language</span>.</p>
           <div class="jumbotron">
             <h2 class="display-5">Top 10 backend framework list:</h2>
             <hr class="my-2">
@@ -41,7 +41,7 @@
 
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">1. Laravel</h2>
-          <p class="content">Laravel is a free, open-source PHP web framework, created by Taylor Otwell and intended for the development of web applications following the model–view–controller (MVC) architectural pattern and based on Symfony. The first version of <span>laravel</span> released on June 2011. Now a day Laravel is most popular backend framework according to github star.</p>
+          <p class="content">Laravel is a open source and free PHP based web framework. laravel created by Taylor Otwell and Laravel web applications following the model–view–controller (MVC) architectural pattern and based on Symfony. The first version of <span>laravel</span> released on June 2011. Now a day Laravel is most popular backend framework according to github star.</p>
           <ul class="content">
             <li><b>Language</b>: PHP</li>
             <li><b>Latest version</b>: laravel 7</li>
@@ -54,7 +54,7 @@
         <!-- 2 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">2. Flask</h2>
-          <p class="content">Flask is a mico web framework which is based on python high level language. It has no database abstraction layer, form validation, or any other components where pre-existing third-party libraries provide common functions.However, Flask supports extensions that can add application features as if they were implemented in Flask itself. Flask was created by Armin Ronacher of Pocoo, an international group of Python enthusiasts formed in 2004. Now a day Flask is second most popular backend framework according to github star.</p>
+          <p class="content">Flask is a mico web framework which is based on python high level language. flask has no database abstraction layer, form validation or any other components it has third-party libraries which provide common functions. Flask supports extensions that can add application features as if they were implemented in Flask itself. Flask was created by Armin Ronacher of Pocoo. Now a day Flask is second most popular backend framework according to github star.</p>
           <ul class="content">
             <li><b>Language</b>: Python</li>
             <li><b>Latest version</b>: Flask 1.1.2</li>
@@ -78,7 +78,7 @@
         <!-- 4 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">4. Express-js</h2>
-          <p class="content">Express, is a web application framework for Node.js, released as free and open-source software under the MIT License. It is designed for building web applications and APIs. Express.js was founded by TJ Holowaychuk. The first release, according to Express.js's GitHub repository, was on the 22 May, 2010. Version 0.12 In June 2014. according to github star <span>express-js</span> (49,363) hold 4th place in thr list</p>
+          <p class="content">Express is a web application framework based on Node.js. Express released as free and open source software under the MIT License. It is used for building web applications and APIs. Express.js was founded by TJ Holowaychuk. The first release, according to Express.js's GitHub repository, was on the 22 May, 2010. Version 0.12 In June 2014. according to github star <span>express-js</span> (49,363) hold 4th place in thr list</p>
           <ul class="content">
             <li><b>Language</b>: JavaScript</li>
             <li><b>Latest version</b>: 4.17.1</li>
