--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -41,7 +41,7 @@
 
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">1. Laravel</h2>
-          <p class="content">Laravel is a open source and free PHP based web framework. laravel created by Taylor Otwell and Laravel web applications following the model–view–controller (MVC) architectural pattern and based on Symfony. The first version of <span>laravel</span> released on June 2011. Now a day Laravel is most popular backend framework according to github star.</p>
+          <p class="content">Laravel is a open source and free PHP based web framework. laravel created by Taylor Otwell and Laravel web applications following the MVC (model view controller ) architectural pattern and based on Symfony. The first version of <span>laravel</span> released on June 2011. Now a day Laravel is most popular backend framework according to github star.</p>
           <ul class="content">
             <li><b>Language</b>: PHP</li>
             <li><b>Latest version</b>: laravel 7</li>
@@ -54,7 +54,7 @@
         <!-- 2 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">2. Flask</h2>
-          <p class="content">Flask is a mico web framework which is based on python high level language. flask has no database abstraction layer, form validation or any other components it has third-party libraries which provide common functions. Flask supports extensions that can add application features as if they were implemented in Flask itself. Flask was created by Armin Ronacher of Pocoo. Now a day Flask is second most popular backend framework according to github star.</p>
+          <p class="content">Flask is a mico web framework which is based on python high level language and. flask has no database abstraction layer, form validation or any other components it has third-party libraries which provide common functions. Flask was created by Armin Ronacher of Pocoo. Now a day Flask is second most popular backend framework according to github star. Using flask framework you can build interactive websites.</p>
           <ul class="content">
             <li><b>Language</b>: Python</li>
             <li><b>Latest version</b>: Flask 1.1.2</li>
@@ -102,7 +102,7 @@
         <!-- 6 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">6. APS .NET core</h2>
-          <p class="content">APS .NET core also a open source web application framework and successor to ASP.NET.  ASP.NET Core is the new web framework from Microsoft. It has been redesigned from the ground up to be fast, flexible, modern, and work across different platforms. ASP.NET Core one of the most popular framework among web developers. ASP.NET Core is the framework you want to use for web development with .NET.</p>
+          <p class="content">APS .NET core also a open source web application framework and successor to ASP.NET.  ASP.NET Core is the new web framework from Microsoft. It has been restructure from the ground up to be fast, modern, flexible, and work across different platforms. ASP.NET Core one of the most popular framework among web developers. ASP.NET Core is the framework you want to use for web development with .NET.</p>
           <ul class="content">
             <li><b>Language</b>: C#</li>
             <li><b>Latest version</b>: .NET Core 3.1.3 </li>
@@ -138,7 +138,7 @@
         <!-- 9 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">9. Spring MVC</h2>
-          <p class="content">A Spring MVC is a Java framework which is used to build web applications. Spring Web MVC framework provides Model-View-Controller (MVC) architecture and ready components that can be used to develop flexible and loosely coupled web applications.it has become popular in the Java community as an addition to the Enterprise JavaBeans model. The Spring Framework is open source. </p>
+          <p class="content">A Spring MVC is a Java  based framework which is used to create web applications. Spring Web MVC framework provides Model-View-Controller (MVC) architecture and ready components that can be used to develop flexible and loosely coupled web applications.it has become popular in the Java community as an addition to the Enterprise JavaBeans model. The Spring Framework is open source. </p>
           <ul class="content">
             <li><b>Language</b>: Java </li>
             <li><b>Latest version</b>: Spring Framework 5.2.7 </li>
