--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -78,7 +78,7 @@
         <!-- 4 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">4. Express-js</h2>
-          <p class="content">Express is a web application framework based on Node.js. Express released as free and open source software under the MIT License. It is used for building web applications and APIs. Express.js was founded by TJ Holowaychuk. The first release, according to Express.js's GitHub repository, was on the 22 May, 2010. Version 0.12 In June 2014. according to github star <span>express-js</span> (49,363) hold 4th place in thr list</p>
+          <p class="content">Express is a web application framework based on Node.js. Express released as free and open source software under the MIT License. It is used for creating web applications and APIs. Express.js was founded by TJ Holowaychuk. The first release, according to Express.js's GitHub repository, was on the 22 May, 2010. Version 0.12 In June 2014. according to github star <span>express-js</span> (49,363) hold 4th place in thr list</p>
           <ul class="content">
             <li><b>Language</b>: JavaScript</li>
             <li><b>Latest version</b>: 4.17.1</li>
@@ -138,7 +138,7 @@
         <!-- 9 -->
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">9. Spring MVC</h2>
-          <p class="content">A Spring MVC is a Java  based framework which is used to create web applications. Spring Web MVC framework provides Model-View-Controller (MVC) architecture and ready components that can be used to develop flexible and loosely coupled web applications.it has become popular in the Java community as an addition to the Enterprise JavaBeans model. The Spring Framework is open source. </p>
+          <p class="content">A Spring MVC is a Java  based framework which is used to create web applications. Spring MVC framework also follows MVC architecture and ready components that can be used to develop flexible and loosely coupled web applications.it has become popular in the Java community as an addition to the Enterprise JavaBeans model. The Spring Framework is open source. </p>
           <ul class="content">
             <li><b>Language</b>: Java </li>
             <li><b>Latest version</b>: Spring Framework 5.2.7 </li>
