--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="To create Dynamic web app framework required to built interactive website. web framework is a code library that makes web development quicker and easier by giving basic patterns for building reliable, scalable and maintainable web applications. Web frameworks exist to make it easier for the developer to make a web application."> {% endblock desc%}
+{% block desc%}<meta name="description" content="to create Dynamic website, framework play  very important role. Choose any one of framework in given list which is suitable for you.  "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Top 10 backend Framework for web development in 2020, Top 10 backend Framework, Static & Dynamic Web, Static and Dynamic, What is backend, most popular framework, Django framework, top 10 framework, frameworks "> {% endblock key%}
   {% load static %}
     {% block title%}Top 10 backend Framework for web development in 2020 - hipein.com{% endblock title%}
@@ -119,7 +119,7 @@
             <li><b>Language</b>: Elixir</li>
             <li><b>Latest version</b>: 1.5.3</li>
             <li><b>How to install</b>: <a href="https://hexdocs.pm/phoenix/installation.html">Click here</a></li>
-            <li><b>Website</b>: Heroic Labs, Cargo Sense<, voice layer etc./li>
+            <li><b>Website</b>: Heroic Labs, Cargo Sense, voice layer etc.</li>
           </ul>
           <hr class="my-2">
         </div>
