--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -37,16 +37,20 @@
     <!-- 1 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>LAUNCH</strong>
+        <strong>Available at</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Announced</strong>
-          <p>	2020, February 11</p>
+          <strong>Realsed on</strong>
+          <p>	11 feb 2020</p>
+        </div>
+        <div class="specs_info">
+          <strong>Amazon</strong>
+          <p>Yes</p>
         </div>
         <div class="specs_info1">
-          <strong>Status</strong>
-          <p>	Available. Released 2020, March 06</p>
+          <strong>Flipkart</strong>
+          <p>Yes</p>
         </div>
       </div>
     </div>
@@ -61,8 +65,8 @@
           <p>GSM / CDMA / HSPA / EVDO / LTE</p>
         </div>
         <div class="specs_info1">
-          <strong>Speed</strong>
-          <p>HSPA 42.2/5.76 Mbps, LTE-A (7CA) Cat20 2000/200 Mbps</p>
+          <strong>4G</strong>
+          <p>Yes</p>
         </div>
       </div>
     </div>
@@ -73,28 +77,20 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Type</strong>
+          <strong>Screen</strong>
           <p>Dynamic AMOLED 2X capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
-          <strong>Size</strong>
-          <p>6.2 inches, 93.8 cm2 (~89.5% screen-to-body ratio)</p>
+          <strong>Size(inch)</strong>
+          <p>6.2</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>	1440 x 3200 pixels, 20:9 ratio (~563 ppi density)</p>
-        </div>
-        <div class="specs_info">
-          <strong>Protection</strong>
-          <p>	Corning Gorilla Glass 6</p>
-        </div>
-        <div class="specs_info">
-          <strong></strong>
-          <p>HDR10+</p>
+          <p>	1440 x 3200 pixels</p>
         </div>
         <div class="specs_info1">
-          <strong></strong>
-          <p> Always-on display</p>
+          <strong>Protection</strong>
+          <p>Gorilla Glass 6</p>
         </div>
       </div>
     </div>
@@ -105,39 +101,39 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Dimension</strong>
-          <p>151.7 x 69.1 x 7.9 mm (5.97 x 2.72 x 0.31 in)</p>
+          <strong>Dimension(mm)</strong>
+          <p>151.7 x 69.1 x 7.9 mm</p>
         </div>
         <div class="specs_info">
-          <strong>Weight</strong>
-          <p>	163 g (5.75 oz)</p>
+          <strong>Weight(g)</strong>
+          <p>	163 g</p>
         </div>
         <div class="specs_info">
           <strong>Build</strong>
           <p>	Glass front (Gorilla Glass 6), glass back (Gorilla Glass 6), aluminum frame</p>
         </div>
-        <div class="specs_info1">
-          <strong>SIM</strong>
-          <p>	Single SIM (Nano-SIM and/or eSIM) or</p>
+        <div class="specs_info">
+          <strong>SIM Type</strong>
+          <p>Nano-SIM</p>
         </div>
         <div class="specs_info1">
-          <strong>SIM</strong>
+          <strong></strong>
           <p>Hybrid Dual SIM (Nano-SIM, dual stand-by)</p>
         </div>
-          <div class="specs_info1">
+          <div class="specs_info">
           <strong></strong>
-          <p>IP68 dust/water resistant (up to 1.5m for 30 mins)</p>
+          <p>IP68 dust and water resistant (up to 1.5m for 30 mins)</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
-          <p>	Samsung Pay (Visa, MasterCard certified)</p>
+          <p>	Samsung Pay - Visa, MasterCard certified</p>
         </div>
       </div>
     </div>
     <!-- 4 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>PLARFROM</strong>
+        <strong>PLATFROM</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
@@ -146,15 +142,11 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Exynos 990 (7 nm+) - Global</p>
+          <p>Exynos 990 (7 nm+)l</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
-          <p>Octa-core (2x2.73 GHz Mongoose M5 & 2x2.50 GHz Cortex-A76 &</p>
-        </div>
-        <div class="specs_info">
-          <strong>CPU</strong>
-          <p> 4x2.0 GHz Cortex-A55) - Global</p>
+          <p>Octa-core</p>
         </div>
         <div class="specs_info1">
           <strong>GPU</strong>
@@ -185,20 +177,20 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Triple</strong>
-          <p>	12 MP, f/1.8, 26mm (wide), 1/1.76", 1.8µm, Dual Pixel PDAF, OIS</p>
+          <strong>Rear camera</strong>
+          <p>Triple</p>
         </div>
         <div class="specs_info">
           <strong></strong>
-          <p>64 MP, f/2.0, 29mm (telephoto), 1/1.72", 0.8µm, PDAF, OIS, </p>
+          <p>64 MP + 12 MP + 12 MP</p>
+        </div>
+        <div class="specs_info">
+          <strong>selfie camera</strong>
+          <p>Dual</p>
         </div>
         <div class="specs_info">
           <strong></strong>
-          <p> 1.1x optical zoom, 3x hybrid zoom</p>
-        </div>
-        <div class="specs_info">
-          <strong></strong>
-          <p>12 MP, f/2.2, 13mm (ultrawide), 1.4µm, Super Steady video</p>
+          <p>10 MP</p>
         </div>
         <div class="specs_info">
           <strong>Features</strong>
@@ -209,28 +201,8 @@
           <p>	8K@24fps, 4K@30/60fps, 1080p@30/60/240fps, 720p@960fps, HDR10+,</p>
         </div>
         <div class="specs_info1">
-          <strong>Video</strong>
-          <p>	 stereo sound rec., gyro-EIS & OIS</p>
-        </div>
-      </div>
-    </div>
-    <!-- 7 -->
-    <div class="specs_table">
-      <div class="specs">
-        <strong>FRONT CAMERA</strong>
-      </div>
-      <div class="specs_type">
-        <div class="specs_info">
-          <strong>Dual</strong>
-          <p>	10 MP, f/2.2, 26mm (wide), 1/3.2", 1.22µm, Dual Pixel PDAF</p>
-        </div>
-        <div class="specs_info1">
-          <strong>Features</strong>
-          <p>	Dual video call, Auto-HDR</p>
-        </div>
-        <div class="specs_info1">
-          <strong>Video</strong>
-          <p>4K@30/60fps, 1080p@30fps</p>
+          <strong></strong>
+          <p>stereo sound rec., gyro-EIS & OIS</p>
         </div>
       </div>
     </div>
@@ -247,10 +219,6 @@
         <div class="specs_info">
           <strong>Charging</strong>
           <p>Fast charging 25W</p>
-        </div>
-        <div class="specs_info1">
-          <strong></strong>
-          <p>USB Power Delivery 3.0</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
@@ -278,7 +246,7 @@
         </div>
         <div class="specs_info">
           <strong>Radio</strong>
-          <p>	FM radio (Snapdragon model only; market/operator dependent)</p>
+          <p>Yes</p>
         </div>
         <div class="specs_info">
           <strong>NFC</strong>
@@ -313,7 +281,7 @@
     <!-- 11 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>SOUND</strong>
+        <strong>Multimedia</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
@@ -338,7 +306,7 @@
         </div>
         <div class="specs_info1">
           <strong>Models</strong>
-          <p>	SM-G980, SM-G980F, SM-G980F/DS</p>
+          <p> S20</p>
         </div>
       </div>
     </div>
