--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -57,12 +57,16 @@
     <!-- 2 -->
     <div class="specs_table">
       <div class="specs">
-        <strong>NETWORK</strong>
+        <strong>NETWORK TYPE</strong>
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Technology</strong>
-          <p>GSM / CDMA / HSPA / EVDO / LTE</p>
+          <strong>2G</strong>
+          <p>Yes</p>
+        </div>
+        <div class="specs_info">
+          <strong>3G</strong>
+          <p>Yes</p>
         </div>
         <div class="specs_info1">
           <strong>4G</strong>
@@ -110,7 +114,7 @@
         </div>
         <div class="specs_info">
           <strong>Build</strong>
-          <p>	Glass front (Gorilla Glass 6), glass back (Gorilla Glass 6), aluminum frame</p>
+          <p>glass back-Gorilla Glass 6 and aluminum frame</p>
         </div>
         <div class="specs_info">
           <strong>SIM Type</strong>
@@ -119,14 +123,6 @@
         <div class="specs_info1">
           <strong></strong>
           <p>Hybrid Dual SIM (Nano-SIM, dual stand-by)</p>
-        </div>
-          <div class="specs_info">
-          <strong></strong>
-          <p>IP68 dust and water resistant (up to 1.5m for 30 mins)</p>
-        </div>
-        <div class="specs_info1">
-          <strong></strong>
-          <p>	Samsung Pay - Visa, MasterCard certified</p>
         </div>
       </div>
     </div>
@@ -196,7 +192,7 @@
           <strong>Features</strong>
           <p>	LED flash, auto-HDR, panorama</p>
         </div>
-        <div class="specs_info1">
+        <div class="specs_info">
           <strong>Video</strong>
           <p>	8K@24fps, 4K@30/60fps, 1080p@30/60/240fps, 720p@960fps, HDR10+,</p>
         </div>
@@ -272,9 +268,17 @@
             <strong></strong>
             <p> compass, barometer</p>
           </div>
-          <div class="specs_info1">
+          <div class="specs_info">
             <strong></strong>
             <p>Bixby natural language commands and dictation</p>
+          </div>
+          <div class="specs_info1">
+            <strong></strong>
+            <p>	Samsung Pay - Visa, MasterCard certified</p>
+          </div>
+          <div class="specs_info1">
+            <strong>WaterResistant</strong>
+            <p>Yes - up to 1.5m for 30 min</p>
           </div>
       </div>
     </div>
