--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -57,6 +57,26 @@
     <!-- 2 -->
     <div class="specs_table">
       <div class="specs">
+        <strong>BRAND</strong>
+      </div>
+      <div class="specs_type">
+        <div class="specs_info">
+          <strong>Samsung</strong>
+          <p>Cosmic Grey, Cloud Blue, Cloud Pink, Cloud White, Aura Red</p>
+        </div>
+        <div class="specs_info1">
+          <strong>Models</strong>
+          <p> S20</p>
+        </div>
+        <div class="specs_info">
+          <strong>Color</strong>
+          <p>Cloud Blue, Cosmic Grey, Cloud White, Cloud Pink, Aura Red</p>
+        </div>
+      </div>
+    </div>
+    <!-- 2 -->
+    <div class="specs_table">
+      <div class="specs">
         <strong>NETWORK TYPE</strong>
       </div>
       <div class="specs_type">
@@ -299,22 +319,8 @@
       </div>
     </div>
     <!-- 12 -->
-    <div class="specs_table">
-      <div class="specs">
-        <strong>MISC</strong>
-      </div>
-      <div class="specs_type">
-        <div class="specs_info">
-          <strong>Color</strong>
-          <p>Cosmic Grey, Cloud Blue, Cloud Pink, Cloud White, Aura Red</p>
-        </div>
-        <div class="specs_info1">
-          <strong>Models</strong>
-          <p> S20</p>
-        </div>
-      </div>
-    </div>
-    </div>
+
+  </div>
     <!-- 13 -->
     <!-- footer -->
     {% endblock specs%}
