--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -61,7 +61,11 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Samsung</strong>
+          <strong></strong>
+          <p>Samsung</p>
+        </div>
+        <div class="specs_info">
+          <strong>Color</strong>
           <p>Cosmic Grey, Cloud Blue, Cloud Pink, Cloud White, Aura Red</p>
         </div>
         <div class="specs_info1">
