--- a/limbo/affiliate/templates/mobile/samsung/s20/s20.html
+++ b/limbo/affiliate/templates/mobile/samsung/s20/s20.html
@@ -61,20 +61,20 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong></strong>
+          <strong>Make</strong>
           <p>Samsung</p>
-        </div>
-        <div class="specs_info">
-          <strong>Color</strong>
-          <p>Cosmic Grey, Cloud Blue, Cloud Pink, Cloud White, Aura Red</p>
         </div>
         <div class="specs_info1">
           <strong>Models</strong>
           <p> S20</p>
         </div>
+        <div class="specs_info">
+          <strong>Color</strong>
+          <p>Cosmic-Grey, Cloud-Blue, Cloud-Pink, Cloud-White, Aura-Red</p>
+        </div>
       </div>
     </div>
-    <!-- 2 -->
+    <!-- 3 -->
     <div class="specs_table">
       <div class="specs">
         <strong>NETWORK TYPE</strong>
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-    <!-- 3 -->
+    <!-- 4 -->
     <div class="specs_table">
       <div class="specs">
         <strong>DISPLAY</strong>
@@ -118,7 +118,7 @@
         </div>
       </div>
     </div>
-    <!-- 4 -->
+    <!-- 5 -->
     <div class="specs_table">
       <div class="specs">
         <strong>BODY</strong>
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <!-- 4 -->
+    <!-- 6 -->
     <div class="specs_table">
       <div class="specs">
         <strong>PLATFROM</strong>
@@ -170,7 +170,7 @@
         </div>
       </div>
     </div>
-    <!-- 5 -->
+    <!-- 7 -->
     <div class="specs_table">
       <div class="specs">
         <strong>MEMORY</strong>
@@ -186,7 +186,7 @@
         </div>
       </div>
     </div>
-    <!-- 6 -->
+    <!-- 8 -->
     <div class="specs_table">
       <div class="specs">
         <strong>CAMERA</strong>
@@ -222,7 +222,7 @@
         </div>
       </div>
     </div>
-    <!-- 8 -->
+    <!-- 9 -->
     <div class="specs_table">
       <div class="specs">
         <strong>BATTERY</strong>
@@ -242,7 +242,7 @@
         </div>
       </div>
     </div>
-    <!-- 9 -->
+    <!-- 10 -->
     <div class="specs_table">
       <div class="specs">
         <strong>COMMS.</strong>
@@ -274,7 +274,7 @@
         </div>
       </div>
     </div>
-    <!-- 10 -->
+    <!-- 11 -->
     <div class="specs_table">
       <div class="specs">
         <strong>FEATURE</strong>
@@ -302,7 +302,7 @@
           </div>
       </div>
     </div>
-    <!-- 11 -->
+    <!-- 12 -->
     <div class="specs_table">
       <div class="specs">
         <strong>Multimedia</strong>
@@ -318,8 +318,8 @@
         </div>
       </div>
     </div>
-    <!-- 12 -->
-  </div>
     <!-- 13 -->
     <!-- footer -->
+  </div>
+
     {% endblock specs%}
