--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -550,6 +550,7 @@
           margin-left:0;
         }
         button{
+          width: 400px;
           margin-top: 5px;
         }
         .content_text{
