--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -126,16 +126,17 @@
           height: 870px;
         }
         .content_img img{
-          width: 99%;
           height: 320px;
+          margin-left: 0;
         }
-        .affilated-link_amazon{
-          margin-left:0;
+        .aff-link1{
+          flex-direction: column;
         }
         .affilated-link_flipcart{
           margin-left:0;
         }
         button{
+          width: 400px;
           margin-top: 5px;
         }
         .content_text{
