--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -126,6 +126,7 @@
           height: 870px;
         }
         .content_img img{
+          width: 100%;
           height: 320px;
           margin-left: 0;
         }
@@ -138,6 +139,7 @@
         button{
           width: 350px;
           margin-top: 5px;
+          margin-left: -20px;
         }
         .content_text{
           font-size: 15px;
