--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -605,7 +605,7 @@
                 <h3 style="color:gray;">Top 10 backend Framework for web development</h3>
                 <p style="color:gray;">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . It is the term used for the behind-the-scenes activities that happen when performing any action on a website.</p>
                 <div class="badge">
-                  <a class="read-more" href="{% url 'toptenframework' %}">Read more</a>
+                  <a class="read-more" href="{% url 'pythonVenv' %}">Read more</a>
                   <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Programing</a>
                 </div>
               </div>
