--- a/limbo/affiliate/templates/blog/programing/python_venv.html
+++ b/limbo/affiliate/templates/blog/programing/python_venv.html
@@ -1,7 +1,7 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content=""> {% endblock desc%}
 {% block key%}<meta name="keywords" content="how to create python virtual Environment, python virtual Environment windows, python create virtual Environment, activate virtualenv window,  virtualenv python version, virtualenv python
- ">
+ ">{% endblock key%}
  {% block style %}
  <style>
    .code{
@@ -14,9 +14,6 @@
      margin: 4px;
    }
  </style>
- {% endblock style %}
- {% endblock key%}
- {% block style %}
  {% endblock style %}
   {% load static %}
     {% block title%}How to create python virtual Environment - hipein{% endblock title%}
