--- a/limbo/affiliate/templates/blog/programing/python_venv.html
+++ b/limbo/affiliate/templates/blog/programing/python_venv.html
@@ -29,7 +29,7 @@
           <img class="image" src="{% static 'image/article/programing/venv.png'%}" alt="">
           <p></p>
           <hr class="my-2">
-          <p  class="content">Now a day python become most popular high level language. Python was created by Guido Van Rossum and released in 1991. In this entire article i will teach you <b>how to create python virtual Environment ?</b>. If you not install python IDE in your desktop yet, then installed pyhton from <a href="#">here</a> and choose python step up according to your OS.</p>
+          <p  class="content">Now a day python become most popular high level language. Python was created by Guido Van Rossum and released in 1991. In this entire article i will teach you <b>how to create python virtual Environment ?</b>. If you not install python IDE in your desktop yet, then installed pyhton from <a href="https://www.python.org/downloads/">here</a> and choose python step up according to your OS.</p>
           <div class="jumbotron">
             <h1 class="display-4">What is virtualenv python ?</h1>
             <p class="lead">A virtual environment is a tool that can create a separate environment for each different project, which has no connection to the remote project. It is one of the most important tools that most Python developers use.</p>
@@ -80,7 +80,7 @@
       <div class="code">
         <p >(myenv) C:\Users\ASUS&gt;desktop&gt;python venv&gt;pip install Django==3.0.8</p>
       </div>
-      <p class="content">The Django 3.0.8 package will be placed in myenv folder and will be isolated from the complete system. In this way you can install python packages which is need for your project. If don't know about django framework <a href="#">Click here</a> to read <b>top 10 backend frameworks</b>.</p>
+      <p class="content">The Django 3.0.8 package will be placed in myenv folder and will be isolated from the complete system. In this way you can install python packages which is need for your project. If don't know about django framework <a href="{% url 'toptenframework' %}">Click here</a> to read <b>top 10 backend frameworks</b>.</p>
       <p class="content"></p>
       <p class="content">Note : You can also check install python package in your virtual environment by using freeze command.</p>
       <div class="code">
