--- a/limbo/affiliate/templates/page/search.html
+++ b/limbo/affiliate/templates/page/search.html
@@ -107,7 +107,7 @@
   }
   .blogs{
     display: flex;
-    width: 100%;
+    width: 80%;
     margin: 20px 200px 20px 150px;
   }
   .blog-post{
@@ -116,13 +116,13 @@
     border-top: 1px solid #eee;
   }
   .blog-posts{
-    width: 69.4%;
+    width: 90%;
   }
   .post{
     display: flex;
   }
   .img-article{
-    width: 100%;
+    width: 320;
   }
   .post-info{
     padding-left: 10px;
